trunk/src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N40000001JA4xEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invite_Code__c</fullName>
        <description>Holds the code to locate the incoming user</description>
        <label>Invite Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Obj__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>R00N40000001JAEsEAO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Bool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Yes No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Response</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>